--- a/site/content/posts/2014-02-25-fosdem-2014.md
+++ b/site/content/posts/2014-02-25-fosdem-2014.md
@@ -1,12 +1,8 @@
 ---
 title: Fosdem 2014
-author: Tiphaine
+author: Laurie
 date: 2014-02-25T14:04:00+00:00
-featured_image: /wp-content/uploads/2014/02/Sogilis-Christophe-Levet-Photographe-7596.jpg
-tumblr_sogilisblog_permalink:
-  - http://sogilisblog.tumblr.com/post/77159351778/fosdem-2014
-tumblr_sogilisblog_id:
-  - 77159351778
+featured_image: /img/2014/02/Sogilis-Christophe-Levet-Photographe-7596.jpg
 pyre_show_first_featured_image:
   - no
 pyre_portfolio_width_100:
@@ -93,93 +89,83 @@ tags:
   - firefox os
   - fosdem
   - open source
-
 ---
-**Cette année, les files d’attentes du Fosdem ont dépassé toute mesure. <span style="text-decoration: underline;"><a href="https://lh4.googleusercontent.com/-SeFzR8wU6Gk/Uu5919IbAEI/AAAAAAAAZ3g/Qh48-Bl8NWI/w954-h716-no/IMG_20140202_180257.jpg" target="_blank">Plus de 8300 adresses MAC uniques connectées</a></span> sur deux jours, une room JS pleine à craquer… et vendredi soir 20h, déjà plus de bière gratuite au <span style="text-decoration: underline;"><a href="https://fosdem.org/2014/practical/beerevent/" target="_blank">Friday Beer Event</a></span>. Mais, ça valait le coup quand même.**
 
-&nbsp;
+Cette année, les files d'attentes du Fosdem ont dépassé toute mesure. [Plus de 8300 adresses MAC uniques connectées](https://lh4.googleusercontent.com/-SeFzR8wU6Gk/Uu5919IbAEI/AAAAAAAAZ3g/Qh48-Bl8NWI/w954-h716-no/IMG_20140202_180257.jpg) sur deux jours, une room JS pleine à craquer… et vendredi soir 20h, déjà plus de bière gratuite au [Friday Beer Event](https://fosdem.org/2014/practical/beerevent/). Mais, ça valait le coup quand même.
 
-<img class="aligncenter" src="http://65.media.tumblr.com/0c2d39d437a25a25951801addf7dfb42/tumblr_inline_n170upPzDl1qaq4v9.png" alt="image" />
+![Fosdem 2014](http://65.media.tumblr.com/0c2d39d437a25a25951801addf7dfb42/tumblr_inline_n170upPzDl1qaq4v9.png)
 
 <!-- more -->
 
-&nbsp;
+## Des développeurs, mais pas que
 
-## **Des développeurs, mais pas que**
+Conférences, séances de piratage, lightning talks ont eu lieu dans ce qu'on appelle les ['developper rooms'](https://fosdem.org/2014/schedule/rooms/) (ou 'devrooms'), des salles organisées autour d'un thème commun.
 
-Conférences, séances de piratage, lightning talks ont eu lieu dans ce qu’on appelle les <span style="text-decoration: underline;"><a href="https://fosdem.org/2014/schedule/rooms/" target="_blank">‘developper rooms’</a></span> (ou ‘devrooms’), des salles organisées autour d&rsquo;un thème commun.
+Cela dit, les sujets n'étaient pas tous purement techniques, et les talks s'adressaient à l'ensemble de la communauté Open Source. Je n'ai donc pas arpenté les couloirs sans repères, perdue, comme un chat à qui on aurait coupé les moustaches. Mais en courant d'une room à l'autre pour en louper le moins possible.
 
-Cela dit, les sujets n’étaient pas tous purement techniques, et les talks s’adressaient à l’ensemble de la communauté Open Source. Je n’ai donc pas arpenté les couloirs sans repères, perdue, comme un chat à qui on aurait coupé les moustaches. Mais en courant d’une room à l’autre pour en louper le moins possible.
+---
 
-&nbsp;
+## Programme du week-end : lancer 1D6+4
 
-* * *
+### Browser les stands
 
-## **Programme du week-end : lancer 1D6+4**
-
-<span style="text-decoration: underline;"><strong>Browser les stands</strong></span>
-
-Les festivités ont commencé par une visite des <span style="text-decoration: underline;"><a href="https://fosdem.org/2014/stands/" target="_blank">stands</a></span> présentés au Fosdem.
+Les festivités ont commencé par une visite des [stands](https://fosdem.org/2014/stands/) présentés au Fosdem.
 
 Un tour de loot utile pour découvrir des logiciels de démo, récupérer des stickers, voir un éléphant bleu PostgreSQL, et regarder une imprimante 3D faire des badges chez Fedora.
 
-Ensuite, il a fallu choisir parmi <span style="text-decoration: underline;"><a href="https://fosdem.org/2014/schedule/" target="_blank">plus de 500 événements</a></span> le programme des deux jours à venir. Voici un aperçu rapide (et non exhaustif) des talks qui m’ont paru intéressants :
+Ensuite, il a fallu choisir parmi [plus de 500 événements](https://fosdem.org/2014/schedule/) le programme des deux jours à venir. Voici un aperçu rapide (et non exhaustif) des talks qui m'ont paru intéressants :
 
-<span style="text-decoration: underline;"><strong>State of Firefox OS</strong></span>
+### State of Firefox OS
 
-<span style="text-decoration: underline;"><a href="https://twitter.com/fabi1cazenave" target="_blank">Fabien Cazenave</a></span> a exposé les avancées de Firefox OS en 2013, ainsi que les développements prévus pour 2014.
+[Fabien Cazenave](https://twitter.com/fabi1cazenave) a exposé les avancées de Firefox OS en 2013, ainsi que les développements prévus pour 2014.
 
-L’an dernier, 3 téléphones équipés de <span style="text-decoration: underline;"><a href="http://www.mozilla.org/en-US/firefox/os/" target="_blank">Firefox OS</a></span> (ZTE Open, Alcatel One Touch Fire, LG Fireweb) ont été livrés dans 14 pays d’Europe, d’Asie et d’Amérique du Sud. Ces mobiles ont également été portés par 17 opérateurs différents.
+L'an dernier, 3 téléphones équipés de [Firefox OS](http://www.mozilla.org/en-US/firefox/os/) (ZTE Open, Alcatel One Touch Fire, LG Fireweb) ont été livrés dans 14 pays d'Europe, d'Asie et d'Amérique du Sud. Ces mobiles ont également été portés par 17 opérateurs différents.
 
-Amélioration de l’UI, support des MMS, conf calls et dual SIM, import / export des contacts depuis GMail ou Outlook… les fonctionnalités développées en 2013 étaient considérées comme autant de pré-requis pour shipper à l’international.
+Amélioration de l'UI, support des MMS, conf calls et dual SIM, import / export des contacts depuis GMail ou Outlook… les fonctionnalités développées en 2013 étaient considérées comme autant de pré-requis pour shipper à l'international.
 
-En 2014, les améliorations prévues s’articulent autour d’une expérience utilisateur plus ‘webbish’, simple et directement accessible :
+En 2014, les améliorations prévues s'articulent autour d'une expérience utilisateur plus 'webbish', simple et directement accessible :
 
-  * &lsquo;Edges gestures’ permettra de basculer rapidement entre les applications
-  * &lsquo;Rocket Bar’ facilitera la recherche de données
-  * L’intégration du navigateur au sein du système sera optimisée
-  * On pourra customiser l’écran d’accueil et le lockscreen via des thèmes
+- `Edges gestures` permettra de basculer rapidement entre les applications
+- `Rocket Bar` facilitera la recherche de données
+- L'intégration du navigateur au sein du système sera optimisée
+- On pourra customiser l'écran d'accueil et le lockscreen via des thèmes
 
 Enfin, Mozilla lance dès maintenant un programme de contribution visant à accélérer la construction de Firefox OS pour les tablettes.
-  
-Si vous souhaitez contribuer à ce projet, vous pouvez demander à <a href="https://hacks.mozilla.org/2014/01/mozilla-launches-contribution-program-to-help-deliver-firefox-os-to-tablets/" target="_blank"><span style="text-decoration: underline;">recevoir gratuitement une tablette de test</span>.</a>
 
-<span style="text-decoration: underline;"><a href="http://bit.ly/1oQKrqM">Voir la vidéo de cette conférence.</a></span>
+Si vous souhaitez contribuer à ce projet, vous pouvez demander à [recevoir gratuitement une tablette de test](https://hacks.mozilla.org/2014/01/mozilla-launches-contribution-program-to-help-deliver-firefox-os-to-tablets/).
 
-<img class="aligncenter" src="http://67.media.tumblr.com/b7d898f448755d4d506047be7e6e8a5f/tumblr_inline_n170vkxzDI1qaq4v9.jpg" alt="image" />
+[Voir la vidéo de cette conférence](http://bit.ly/1oQKrqM)
 
-<span style="text-decoration: underline;"><strong>Web audio API</strong></span>
+![Firefox OS](http://67.media.tumblr.com/b7d898f448755d4d506047be7e6e8a5f/tumblr_inline_n170vkxzDI1qaq4v9.jpg)
 
-<span style="text-decoration: underline;"><a href="https://twitter.com/padenot" target="_blank">Paul Adenot</a></span> a montré les évolutions de l’API Web Audio développée par le W3C Audio WG.
+### Web audio API
+
+[Paul Adenot](https://twitter.com/padenot) a montré les évolutions de l'API Web Audio développée par le W3C Audio WG.
 
 Environnement 3D et jeux, feedback sonore, streaming, on peut utiliser cette API JavaScript pour gérer le traitement et la synthèse audio dans une application web.
 
-<span style="text-decoration: underline;"><a href="http://webaudioplayground.appspot.com/">Vous pouvez aller jouer avec la demo utilisée lors de la présentation.</a></span>
+[Vous pouvez aller jouer avec la demo utilisée lors de la présentation.](http://webaudioplayground.appspot.com/)
 
-<span style="text-decoration: underline;"><a href="http://bit.ly/1msBghE">Ou regarder la vidéo de cette conférence.</a></span>
+[Ou regarder la vidéo de cette conférence.](http://bit.ly/1msBghE)
 
-<img class="aligncenter" src="http://65.media.tumblr.com/f78604569ba9c5f07d470f0e726fd83f/tumblr_inline_n170x3opbV1qaq4v9.png" alt="image" />
+![Conférence Fosdem](http://65.media.tumblr.com/f78604569ba9c5f07d470f0e726fd83f/tumblr_inline_n170x3opbV1qaq4v9.png)
 
-<span style="text-decoration: underline;"><strong>Why you should be an open source project</strong></span>
+### Why you should be an open source project
 
-Depuis le commit initial de nos parents, les pull requests de l’enfance, le développement en intégration continue à l’âge adulte, nous sommes une collection de code.
+Depuis le commit initial de nos parents, les pull requests de l'enfance, le développement en intégration continue à l'âge adulte, nous sommes une collection de code.
 
-<span style="text-decoration: underline;"><a href="https://twitter.com/thisiscaroltoo" target="_blank">Carole Huang</a></span> nous explique en quoi on peut choisir de gérer sa vie personnelle comme un projet open source, en partageant son background (bugs compris), et en intégrant les leçons tirées d’autres personnes pour s’améliorer en continue.
+[Carole Huang](https://twitter.com/thisiscaroltoo) nous explique en quoi on peut choisir de gérer sa vie personnelle comme un projet open source, en partageant son background (bugs compris), et en intégrant les leçons tirées d'autres personnes pour s'améliorer en continue.
 
-Les slides de ce lightning talk sont disponibles en <span style="text-decoration: underline;"><a href="https://fosdem.org/2014/schedule/event/you_os/attachments/slides/400/export/events/attachments/you_os/slides/400/why_open_source_project.pdf" target="_blank">pdf</a></span>.
+Les slides de ce lightning talk sont disponibles en [pdf](https://fosdem.org/2014/schedule/event/you_os/attachments/slides/400/export/events/attachments/you_os/slides/400/why_open_source_project.pdf).
 
-<img class="aligncenter" src="http://67.media.tumblr.com/b672cc586c63c266627ded86bc909771/tumblr_inline_n170wdtKYY1qaq4v9.jpg" alt="image" />
+![Cat](http://67.media.tumblr.com/b672cc586c63c266627ded86bc909771/tumblr_inline_n170wdtKYY1qaq4v9.jpg)
 
-&nbsp;
+---
 
-* * *
+## I can haz wifi ?
 
-## **I can haz wifi ?**
+C'était ma première participation au Fosdem cette année, et j'ai été impressionnée par la qualité des conférences et de l'organisation.
 
-C’était ma première participation au Fosdem cette année, et j’ai été impressionnée par la qualité des conférences et de l’organisation.
-
-Je n’ai pas vu de talks non préparés, lents et monotones. Mais des speakers qui, malgré les accents et les difficultés à s’exprimer en anglais, ont pu offrir des conférences inspirantes qui donnent envie de tester des nouvelles choses.
+Je n'ai pas vu de talks non préparés, lents et monotones. Mais des speakers qui, malgré les accents et les difficultés à s'exprimer en anglais, ont pu offrir des conférences inspirantes qui donnent envie de tester des nouvelles choses.
 
 Et même le wifi, en IPv6, marchait. Ce qui est assez rare dans une conf, surtout quand elle est organisée par des bénévoles et entièrement gratuite.
-
-**Laurie**
