--- a/site/content/posts/2017-03-28-bizdej.md
+++ b/site/content/posts/2017-03-28-bizdej.md
@@ -96,59 +96,25 @@ tags:
   - startup
 
 ---
-<h1 style="text-align: center;">
-  <strong>Les RDV “BIZDEJ” de Sogilis</strong>
-</h1>
+## Les RDV “BIZDEJ” de Sogilis
 
-<h2 style="text-align: center;">
-  <span style="font-weight: 400;">Industriels, startups ou porteurs de projets, profitez de 2h d’accompagnement pour votre projet innovant &#8211; bizdej &#8211; </span>
-</h2>
+**Industriels, startups ou porteurs de projets, profitez de 2h d’accompagnement pour votre projet innovant - bizdej -**
 
-<ul style="text-align: center;">
-  <li style="font-weight: 400;">
-    <span style="font-weight: 400;">Porteurs de projet, vous avez une idée mais ne savez pas comment la concrétiser en startup forte et audacieuse sur son marché ?</span>
-  </li>
-</ul>
+- Porteurs de projet, vous avez une idée mais ne savez pas comment la concrétiser en startup forte et audacieuse sur son marché ?
+- Dirigeants de PME, vous avez besoin de conseil et d’accompagnement pour innover, développer le bon produit sur le bon marché ou réussir votre transformation numérique ?
 
-<ul style="text-align: center;">
-  <li style="font-weight: 400;">
-    <span style="font-weight: 400;">Dirigeants de PME, vous avez besoin de conseil et d’accompagnement pour innover, développer le bon produit sur le bon marché ou réussir votre transformation numérique ?</span>
-  </li>
-</ul>
+**Sogilis, forte de ses 10 ans d’expérience dans l’accompagnement d’entreprises innovantes, vous propose une approche business inédite :**
 
-<h3 style="text-align: center;">
-  <span style="font-weight: 400;">Sogilis, forte de ses 10 ans d’expérience dans l’accompagnement d’entreprises innovantes, vous propose une approche business inédite :</span>
-</h3>
+!(BMD finance développement bizdej)[http://sogilis.com/wp-content/uploads/2017/03/Capture-d’écran-2017-03-27-à-15.42.58.png]
 
-<img class="wp-image-1850 size-full aligncenter" src="http://sogilis.com/wp-content/uploads/2017/03/Capture-d’écran-2017-03-27-à-15.42.58.png" alt="BMD finance développement bizdej" width="570" height="466" srcset="http://sogilis.com/wp-content/uploads/2017/03/Capture-d’écran-2017-03-27-à-15.42.58.png 570w, http://sogilis.com/wp-content/uploads/2017/03/Capture-d’écran-2017-03-27-à-15.42.58-300x245.png 300w" sizes="(max-width: 570px) 100vw, 570px" />
+A l’issue de ces 2h, repartez avec des conseils pragmatiques pour affiner votre proposition de valeur et développer votre idée.
 
-<p style="text-align: center;">
-  <span style="font-weight: 400;">A l’issue de ces 2h, repartez avec des conseils pragmatiques pour affiner votre proposition de valeur et développer votre idée.</span>
-</p>
+**Premières sessions 2017, autour d'un accueil café/croissants :**
 
-<h4 style="text-align: left;">
-  <strong>Premières sessions 2017, autour d&rsquo;un accueil café/croissants :</strong>
-</h4>
+- à Lyon le mardi 6 juin : 9h-11h ou 11h-13h
+- à Grenoble le mercredi 7 juin : 9h-11h ou 11h-13h
 
-<ul style="text-align: center;">
-  <li style="font-weight: 400;">
-    <p style="text-align: left;">
-      <strong>à Lyon le mardi 6 juin : 9h-11h ou 11h-13h </strong>
-    </p>
-  </li>
-  
-  <li style="font-weight: 400;">
-    <p style="text-align: left;">
-      <strong>à Grenoble le mercredi 7 juin : 9h-11h ou 11h-13h</strong>
-    </p>
-  </li>
-</ul>
 
-<p style="text-align: left;">
-  Prenez RDV avec nous : <span style="text-decoration: underline; color: #3366ff;"><span style="text-decoration: underline;"><a style="color: #3366ff; text-decoration: underline;" href="mailto:biz-dej@sogilis.com">biz-dej@sogilis.com</a></span></span> ou 06 11 03 33 50
-</p>
+Prenez RDV avec nous : biz-dej@sogilis.com ou 06 11 03 33 50
 
-<p style="text-align: left;">
-  <p style="text-align: center;">
-    <img class=" wp-image-1852" src="http://sogilis.com/wp-content/uploads/2017/03/1.png" alt="bizdej" width="358" height="501" srcset="http://sogilis.com/wp-content/uploads/2017/03/1.png 480w, http://sogilis.com/wp-content/uploads/2017/03/1-214x300.png 214w" sizes="(max-width: 358px) 100vw, 358px" /> <img class="wp-image-1853" src="http://sogilis.com/wp-content/uploads/2017/03/2.png" alt="bizdej" width="357" height="499" srcset="http://sogilis.com/wp-content/uploads/2017/03/2.png 480w, http://sogilis.com/wp-content/uploads/2017/03/2-214x300.png 214w" sizes="(max-width: 357px) 100vw, 357px" />
-  </p>
+!(bizdej)[http://sogilis.com/wp-content/uploads/2017/03/1.png]
