--- a/site/themes/sogilis/i18n/en.toml
+++ b/site/themes/sogilis/i18n/en.toml
@@ -6,3 +6,42 @@ other = "on"
 
 [publishdate]
 other = "{{ .PublishDate.Format \"January 2, 2006\" }}"
+
+[services]
+other = "Services"
+
+[cloudNativeApplications]
+other = "Cloud Native Applications"
+
+[embeddedSoftwares]
+other = "Logiciels Embarqués & IoT"
+
+[criticalSoftwares]
+other = "Embedded Softwares & IoT"
+
+[theCompany]
+other = "Company"
+
+[ourVision]
+other = "Our Purpose"
+
+[contact]
+other = "Contact"
+
+[jobs]
+other = "Jobs"
+
+[blog]
+other = "Blog"
+
+[contactUs]
+other = "Contact us"
+
+[readMore]
+other = "Read more"
+
+[LegalInfo]
+other = "Legal information"
+
+[allRightsReserved]
+other = "Sogilis - All rights reserved - 2018"
