Standardize post image attribute

--- a/site/content/posts/2013-12-18-sogiday.md
+++ b/site/content/posts/2013-12-18-sogiday.md
@@ -2,7 +2,7 @@
 title: Les Sogidays
 author: Luc
 date: 2013-12-18T08:08:00+00:00
-featured_image: /img/2013/12/Sogilis-Christophe-Levet-Photographe-7326.jpg
+image: /img/2013/12/Sogilis-Christophe-Levet-Photographe-7326.jpg
 categories:
   - LA VIE À SOGILIS
 tag:
