--- a/site/themes/sogilis/i18n/en.toml
+++ b/site/themes/sogilis/i18n/en.toml
@@ -23,7 +23,7 @@ other = "Embedded Softwares & IoT"
 other = "Company"
 
 [ourVision]
-other = "Our Purpose"
+other = "Our purpose"
 
 [contact]
 other = "Contact"
