--- a/site/themes/sogilis/i18n/en.toml
+++ b/site/themes/sogilis/i18n/en.toml
@@ -23,7 +23,7 @@ other = "Embedded Softwares & IoT"
 other = "Company"
 
 [ourVision]
-other = "Our purpose"
+other = "Our Purpose"
 
 [contact]
 other = "Contact"
@@ -41,7 +41,7 @@ other = "Contact us"
 other = "Read more"
 
 [LegalInfo]
-other = "Legal information"
+other = "Legal Information"
 
 [allRightsReserved]
 other = "Sogilis - All rights reserved - 2018"
