--- a/site/content/posts/2017-03-28-bizdej.md
+++ b/site/content/posts/2017-03-28-bizdej.md
@@ -2,7 +2,7 @@
 title: Industriels, startups ou porteurs de projets, profitez de 2h d’accompagnement pour votre projet innovant
 author: Tiphaine
 date: 2017-03-28T09:22:52+00:00
-featured_image: /wp-content/uploads/2017/03/Capture-d’écran-2017-03-27-à-15.42.58-copie.png
+image: /img/2017/03/Capture-2017-03-27-15.42.58.png
 categories:
   - NOTRE VISION
 tags:
