Publish date translated in french

--- a/site/themes/sogilis/i18n/en.toml
+++ b/site/themes/sogilis/i18n/en.toml
@@ -2,7 +2,7 @@
 other = "Written by"
 
 [on]
-other = "on"
+other = "published on"
 
 [publishdate]
 other = "{{ .PublishDate.Format \"January 2, 2006\" }}"
