--- a/site/themes/sogilis/i18n/fr.toml
+++ b/site/themes/sogilis/i18n/fr.toml
@@ -1,11 +1,8 @@
 [writtenBy]
 other = "Écrit par"
 
-[on]
-other = "le"
-
 [publishdate]
-other = "{{ .PublishDate.Day }} {{ index $.Site.Data.months_fr (printf \"%d\" .PublishDate.Month) }} {{ .PublishDate.Year }}"
+other = "Publié le {{ .Date.Day }} {{ index $.Site.Data.mois (printf \"%d\" .Date.Month) }} {{ .Date.Year }}"
 
 [services]
 other = "Services"
