Fix articles titles

--- a/site/content/posts/2014-02-25-fosdem-2014.md
+++ b/site/content/posts/2014-02-25-fosdem-2014.md
@@ -15,7 +15,7 @@ Cette année, les files d'attentes du Fosdem ont dépassé toute mesure. [Plus 
 
 ![Fosdem 2014](https://65.media.tumblr.com/0c2d39d437a25a25951801addf7dfb42/tumblr_inline_n170upPzDl1qaq4v9.png)
 
-## Des développeurs, mais pas que
+# Des développeurs, mais pas que
 
 Conférences, séances de piratage, lightning talks ont eu lieu dans ce qu'on appelle les ['developper rooms'](https://fosdem.org/2014/schedule/rooms/) (ou 'devrooms'), des salles organisées autour d'un thème commun.
 
@@ -23,9 +23,9 @@ Cela dit, les sujets n'étaient pas tous purement techniques, et les talks s'adr
 
 ---
 
-## Programme du week-end : lancer 1D6+4
+# Programme du week-end : lancer 1D6+4
 
-### Browser les stands
+## Browser les stands
 
 Les festivités ont commencé par une visite des [stands](https://fosdem.org/2014/stands/) présentés au Fosdem.
 
@@ -33,7 +33,7 @@ Un tour de loot utile pour découvrir des logiciels de démo, récupérer des st
 
 Ensuite, il a fallu choisir parmi [plus de 500 événements](https://fosdem.org/2014/schedule/) le programme des deux jours à venir. Voici un aperçu rapide (et non exhaustif) des talks qui m'ont paru intéressants :
 
-### State of Firefox OS
+## State of Firefox OS
 
 [Fabien Cazenave](https://twitter.com/fabi1cazenave) a exposé les avancées de Firefox OS en 2013, ainsi que les développements prévus pour 2014.
 
@@ -56,7 +56,7 @@ Si vous souhaitez contribuer à ce projet, vous pouvez demander à [recevoir gra
 
 ![Firefox OS](https://67.media.tumblr.com/b7d898f448755d4d506047be7e6e8a5f/tumblr_inline_n170vkxzDI1qaq4v9.jpg)
 
-### Web audio API
+## Web audio API
 
 [Paul Adenot](https://twitter.com/padenot) a montré les évolutions de l'API Web Audio développée par le W3C Audio WG.
 
@@ -68,7 +68,7 @@ Environnement 3D et jeux, feedback sonore, streaming, on peut utiliser cette API
 
 ![Conférence Fosdem](https://65.media.tumblr.com/f78604569ba9c5f07d470f0e726fd83f/tumblr_inline_n170x3opbV1qaq4v9.png)
 
-### Why you should be an open source project
+## Why you should be an open source project
 
 Depuis le commit initial de nos parents, les pull requests de l'enfance, le développement en intégration continue à l'âge adulte, nous sommes une collection de code.
 
@@ -80,7 +80,7 @@ Les slides de ce lightning talk sont disponibles en [pdf](https://fosdem.org/201
 
 ---
 
-## I can haz wifi ?
+# I can haz wifi ?
 
 C'était ma première participation au Fosdem cette année, et j'ai été impressionnée par la qualité des conférences et de l'organisation.
 
