--- a/site/content/posts/2017-03-28-bizdej.md
+++ b/site/content/posts/2017-03-28-bizdej.md
@@ -16,7 +16,7 @@ tags:
   - startup
 
 ---
-## Les RDV “BIZDEJ” de Sogilis
+# Les RDV “BIZDEJ” de Sogilis
 
 **Industriels, startups ou porteurs de projets, profitez de 2h d’accompagnement pour votre projet innovant - bizdej -**
 
