fix: remove dot before css class

--- a/site/content/posts/2019-12-13-data-test.md
+++ b/site/content/posts/2019-12-13-data-test.md
@@ -41,7 +41,7 @@ Now we want to change the design by replacing `.btn-arrow` to `.btn-link` css cl
 The design can also change by adding tag like `div`, `a`, `span` etc..
 
 {{< highlight html >}}
-<div class=".btn-link" @click="goToPreviousPage">
+<div class="btn-link" @click="goToPreviousPage">
 	Back
 </div>
 {{< /highlight >}}
