Laborious hand changing deadlinks

--- a/site/content/posts/2014-02-25-fosdem-2014.md
+++ b/site/content/posts/2014-02-25-fosdem-2014.md
@@ -11,7 +11,7 @@ tags:
   - open source
 ---
 
-Cette année, les files d'attentes du Fosdem ont dépassé toute mesure. [Plus de 8300 adresses MAC uniques connectées](https://lh4.googleusercontent.com/-SeFzR8wU6Gk/Uu5919IbAEI/AAAAAAAAZ3g/Qh48-Bl8NWI/w954-h716-no/IMG_20140202_180257.jpg) sur deux jours, une room JS pleine à craquer… et vendredi soir 20h, déjà plus de bière gratuite au [Friday Beer Event](https://fosdem.org/2014/practical/beerevent/). Mais, ça valait le coup quand même.
+Cette année, les files d'attentes du Fosdem ont dépassé toute mesure. Plus de 8300 adresses MAC uniques connectées sur deux jours, une room JS pleine à craquer… et vendredi soir 20h, déjà plus de bière gratuite au [Friday Beer Event](https://fosdem.org/2014/practical/beerevent/). Mais, ça valait le coup quand même.
 
 ![Fosdem 2014](https://65.media.tumblr.com/0c2d39d437a25a25951801addf7dfb42/tumblr_inline_n170upPzDl1qaq4v9.png)
 
