Rename img without prefixs

--- a/site/content/posts/2013-12-18-sogiday.md
+++ b/site/content/posts/2013-12-18-sogiday.md
@@ -56,7 +56,7 @@ Sur 11 personnes présentes, globalement, le temps a été bien investi :
 - 6 personnes ont voté 4
 - 2 personnes ont voté 5 (temps très bien investi)
 
-![](/img/Sogiday-post-it.jpg "Post it du Sogiday")
+![](/img/2013-12-Sogiday-post-it.jpg "Post it du Sogiday")
 
 Nous avons en fin de journée décidé de renouveler l’expérience.
 
