Replicate mobile menu modification from sogilis.fr

--- a/site/themes/sogilis/i18n/en.toml
+++ b/site/themes/sogilis/i18n/en.toml
@@ -20,16 +20,22 @@ other = "Embedded Softwares & IoT"
 other = "Company"
 
 [ourVision]
-other = "Our Purpose"
+other = "Our Vision"
+
+[ourApproach]
+other = "Notre Approach"
+
+[joinUs]
+other = "Nous rejoindre"
+
+[blog]
+other = "Blog"
 
 [contact]
 other = "Contact"
 
 [jobs]
 other = "Jobs"
-
-[blog]
-other = "Blog"
 
 [contactUs]
 other = "Contact us"
