Replicate desktop menu modification from sogilis.fr

--- a/site/themes/sogilis/i18n/fr.toml
+++ b/site/themes/sogilis/i18n/fr.toml
@@ -17,7 +17,7 @@ other = "Logiciels Embarqués & IoT"
 other = "Logiciels Critiques"
 
 [theCompany]
-other = "L'Entreprise"
+other = "L'entreprise"
 
 [ourVision]
 other = "Notre vision"
