--- a/site/themes/sogilis/i18n/fr.toml
+++ b/site/themes/sogilis/i18n/fr.toml
@@ -48,3 +48,6 @@ other = "Mentions Légales"
 
 [allRightsReserved]
 other = "Sogilis - Tous Droits Réservés - 2020"
+
+[license]
+other = "Cet article est publié sous licence "
