feat: add Category page

--- a/blog/_posts/2020-10-02-retex-bdd-do178c.md
+++ b/blog/_posts/2020-10-02-retex-bdd-do178c.md
@@ -3,7 +3,7 @@ title: L’utilisation du BDD dans un logiciel DO-178C
 author: MousS'
 date: 2020-10-02
 image: /img/20201002/drone.jpg
-categorie: Développement logiciel
+category: Développement logiciel
 tags:
   - do-178c
   - bdd
