feat: category should not be uppercased

--- a/blog/_posts/2013-12-18-sogiday.md
+++ b/blog/_posts/2013-12-18-sogiday.md
@@ -4,7 +4,7 @@ author: Luc
 date: 2013-12-18T08:08:00+00:00
 image: /img/2013-12-Sogilis-Christophe-Levet-Photographe-7326.jpg
 categories:
-  - LA VIE À SOGILIS
+  - La vie à sogilis
 tag:
   - amélioration continue
   - sogiday
