--- a/blog/_posts/2014-02-25-fosdem-2014.md
+++ b/blog/_posts/2014-02-25-fosdem-2014.md
@@ -4,7 +4,7 @@ author: Laurie
 date: 2014-02-25T14:04:00+00:00
 image: /img/2014-02-Sogilis-Christophe-Levet-Photographe-7596.jpg
 categories:
-  - DÉVELOPPEMENT
+  - Développement logiciel
 tags:
   - firefox os
   - fosdem
