--- a/blog/_posts/2017-03-28-bizdej.md
+++ b/blog/_posts/2017-03-28-bizdej.md
@@ -4,7 +4,7 @@ author: Tiphaine
 date: 2017-03-28T09:22:52+00:00
 image: /img/2017-03-Capture-2017-03-27-15.42.58.png
 categories:
-  - NOTRE VISION
+  - Notre vision
 tags:
   - accompagnement
   - bizdej
