--- a/blog/_posts/2019-12-13-data-test.md
+++ b/blog/_posts/2019-12-13-data-test.md
@@ -4,7 +4,7 @@ author: alban@sogilis.com
 date: 2019-12-13
 image: /img/2019-12-data-test.jpeg
 categories:
-  - DÉVELOPPEMENT
+  - Développement logiciel
 tags:
   - Js
   - VueJs
