fix: all right reserved with correct date

--- a/site/themes/sogilis/i18n/fr.toml
+++ b/site/themes/sogilis/i18n/fr.toml
@@ -38,4 +38,4 @@ other = "Lire la suite"
 other = "Mentions Légales"
 
 [allRightsReserved]
-other = "Sogilis - Tous Droits Réservés - 2021"
+other = "Sogilis - Tous Droits Réservés - "
